실행 확인 및 리패키징
- 빌드 인스트럭션 수정
- MySQL 대소문자 구분하는 경우 대응
- README.md 수정